--- a/lib/premiere_ecoute_web/live/billboards/index_live.html.heex
+++ b/lib/premiere_ecoute_web/live/billboards/index_live.html.heex
@@ -83,7 +83,7 @@
                     <div class="text-right">
                       <.billboard_status_badge status={billboard.status} />
                       <p class="text-sm text-gray-400 mt-1">
-                        {format_date(billboard.inserted_at)}
+                        {PremiereEcouteCore.Date.date(billboard.inserted_at)}
                       </p>
                     </div>
 
