--- a/lib/premiere_ecoute_web/live/discography/album_selection_live.html.heex
+++ b/lib/premiere_ecoute_web/live/discography/album_selection_live.html.heex
@@ -284,7 +284,7 @@
                             <div class="flex-1 min-w-0">
                               <h5 class="font-medium text-white truncate text-sm">{track.name}</h5>
                             </div>
-                            <span class="text-sm text-gray-300">{format_duration(track.duration_ms)}</span>
+                            <span class="text-sm text-gray-300">{PremiereEcouteCore.Duration.timer(track.duration_ms)}</span>
                           </div>
                         </div>
                       <% end %>
