--- a/lib/premiere_ecoute_web/components/layouts/root.html.heex
+++ b/lib/premiere_ecoute_web/components/layouts/root.html.heex
@@ -30,7 +30,7 @@
          
     </script>
   </head>
-  <body class="premiere-ecoute-web">
+  <body class="premiere-ecoute-sandbox">
     {@inner_content}
   </body>
 </html>
