--- a/lib/premiere_ecoute_web/live/billboards/index_live.html.heex
+++ b/lib/premiere_ecoute_web/live/billboards/index_live.html.heex
@@ -81,7 +81,7 @@
 
                   <div class="flex items-center space-x-4">
                     <div class="text-right">
-                      <.billboard_status_badge status={billboard.status} />
+                      <.status_badge status={billboard.status} />
                       <p class="text-sm text-gray-400 mt-1">
                         {PremiereEcouteCore.Date.date(billboard.inserted_at)}
                       </p>
